[project]
name = "pixart_xl"
description = "A ComfyUI extension that integrates PixArt-Alpha models directly into ComfyUI with advanced memory management."
version = "1.0.0"
license = {file = "LICENSE"}
dependencies = ["diffusers", "transformers", "sentencepiece"]

[project.urls]
Repository = "https://github.com/ShmuelRonen/ComfyUI-PixArt_XL"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-PixArt_XL"
Icon = ""
